# bb_rust

./: Cargo.toml
.github/workflows/: main.yml
examples/: gateway_graphql_request.rs  internal_graphql_request.rs
src/: dynamodb.rs  graphql.rs  lib.rs  misc.rs  napi.rs
src/graphql/: gateway.rs  internal.rs  mod.rs
src/services/: apigateway.rs  cloudformation.rs  cognito.rs  cognitoidentityprovider.rs  dynamodb.rs  iot.rs  lambda.rs  mod.rs  organizations.rs  s3.rs  secrets_manager.rs  secretsmanager.rs  ssm.rs  sts.rs
src/types/: mod.rs  peripheral_id.rs
