[package]
edition = "2021"
name = "bb_rust"
resolver = "2"
version = "0.1.0"

[[example]]
name = "gateway_graphql_request"
required-features = ["graphql"]

[[example]]
name = "internal_graphql_request"
required-features = ["graphql"]

[dependencies]
anyhow = {version = "1", optional = true}
async-graphql = {version = "3.0", optional = true}
aws-config = {version = "0.13", optional = true}
aws-sdk-apigateway = {version = "0.13", optional = true}
aws-sdk-cloudformation = {version = "0.13", optional = true}
aws-sdk-cognitoidentityprovider = {version = "0.13", optional = true}
aws-sdk-dynamodb = {version = "0.13", optional = true}
aws-sdk-dynamodbstreams = {version = "0.13", optional = true}
aws-sdk-iot = {version = "0.13", optional = true}
aws-sdk-lambda = {version = "0.13", optional = true}
aws-sdk-organizations = {version = "0.13", optional = true}
aws-sdk-s3 = {version = "0.13", optional = true}
aws-sdk-secretsmanager = {version = "0.13", optional = true}
aws-sdk-ssm = {version = "0.13", optional = true}
aws-sdk-sts = {version = "0.13", optional = true}
aws-types = {version = "0.13", optional = true}
base64 = {version = "0.13", optional = true}
cached = {version = "0.34", optional = true}
env_logger = {version = "0.9", optional = true}
flate2 = {version = "1", optional = true}
graphql_client = {version = "0.10", optional = true}
http = {optional = true, version = "0.2.8"}
lazy_static = "1.4.0"
log = {version = "0.4", optional = true}
napi = {version = "2.4.3", default-features = false, features = ["napi4", "tokio_rt"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_bytes = {version = "0.11", optional = true}
serde_json = {version = "1", optional = true}
serde_with = {version = "1", features = ["json"], optional = true}
thiserror = {version = "1", optional = true}

[dev-dependencies]
anyhow = "1"
aws-config = "0.13"
aws-sdk-dynamodb = "0.13"
cargo-husky = {version = "1.5.0", default_features = false, features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]}
serde_dynamo = {version = "4", features = ["aws-sdk-dynamodb+0_13"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[features]
default = []
graphql = ["misc", "types", "base64", "aws-sdk-lambda", "serde", "serde_json", "graphql_client", "serde_with", "async-graphql"]
misc = ["thiserror", "flate2", "base64", "env_logger", "log", "serde_bytes", "serde", "serde_json"]
napi = ["dep:anyhow", "dep:napi"]
services_apigateway = [
  "aws-config",
  "aws-sdk-apigateway",
  "aws-types",
  "cached",
]
services_cloudformation = [
  "aws-config",
  "aws-sdk-cloudformation",
  "aws-types",
  "cached",
]
services_cognitoidentityprovider = [
  "aws-config",
  "aws-sdk-cognitoidentityprovider",
  "aws-types",
  "cached",
]
services_dynamodb = [
  "aws-config",
  "aws-sdk-dynamodb",
  "aws-sdk-dynamodbstreams",
  "aws-types",
  "http",
  "cached",
]
services_iot = [
  "aws-config",
  "aws-sdk-iot",
  "aws-types",
  "cached",
]
services_lambda = [
  "aws-config",
  "aws-sdk-lambda",
  "aws-types",
  "cached",
]
services_organizations = [
  "aws-config",
  "aws-sdk-organizations",
  "aws-types",
  "cached",
]
services_s3 = [
  "aws-config",
  "aws-sdk-s3",
  "aws-types",
  "cached",
]
services_secretsmanager = [
  "aws-config",
  "aws-sdk-secretsmanager",
  "aws-types",
  "cached",
]
services_ssm = [
  "aws-config",
  "aws-sdk-ssm",
  "aws-types",
  "cached",
]
services_sts = [
  "aws-config",
  "aws-sdk-sts",
  "aws-types",
  "cached",
]
types = ["serde", "thiserror"]
